# compose-x-common

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.scripts/: cleanup_placebo.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
src/: __init__.py
src/compose_x_common/: __init__.py  compose_x_common.py
src/compose_x_common/aws/: __init__.py  acm.py  application_autoscaling.py  aps.py  arns.py  cloudmap.py  codeguru_profiler.py  cognito_userpool.py  dynamodb.py  ec2.py  ecr.py  ecs.py  efs.py  elasticache.py  elasticloadbalancing.py  iam.py  kafka.py  kinesis.py  kms.py  msk.py  neptune.py  opensearch.py  rds.py  resourcegroupstaggingapi.py  route53.py  s3.py  secrets_manager.py  sns.py  sqs.py  ssm_parameter.py  vpc.py  wafv2.py
src/compose_x_common/aws/ecr/: __init__.py  images.py  repositories.py
src/compose_x_common/aws/ecs/: __init__.py  instances.py  services.py  tasks.py
src/compose_x_common/aws/glue/: __init__.py
tests/: __init__.py  conftest.py  test_arns.py  test_aws.py  test_aws_acm.py  test_aws_application_autoscaling.py  test_aws_ecr.py  test_aws_ecs.py  test_aws_kms.py  test_aws_msk.py  test_aws_route53.py  test_aws_vpc.py  test_compose_x_commons_lib.py  test_secrets.py
tests/placebos/acm/: acm.ListCertificates_1.json  acm.ListCertificates_2.json  acm.ListCertificates_3.json
tests/placebos/appas/: application-autoscaling.DescribeScalableTargets_1.json
tests/placebos/common/: ec2.DescribeAvailabilityZones_1.json  sts.AssumeRole_1.json  sts.GetCallerIdentity_1.json  sts.GetCallerIdentity_2.json
tests/placebos/ecr/: api.ecr.BatchDeleteImage_1.json  api.ecr.BatchGetImage_1.json  api.ecr.BatchGetImage_2.json  api.ecr.ListImages_1.json  api.ecr.ListImages_2.json  api.ecr.ListImages_3.json  api.ecr.PutImage_1.json  sts.GetCallerIdentity_1.json  sts.GetCallerIdentity_2.json
tests/placebos/ecr/get_all_images/: api.ecr.BatchGetImage_1.json  api.ecr.BatchGetImage_2.json  api.ecr.ListImages_1.json  sts.GetCallerIdentity_1.json
tests/placebos/ecr/repos/filter_repositories/: api.ecr.DescribeRepositories_1.json
tests/placebos/ecr/repos/list_all_repositories/: api.ecr.DescribeRepositories_1.json  api.ecr.DescribeRepositories_2.json  api.ecr.DescribeRepositories_3.json  api.ecr.DescribeRepositories_4.json
tests/placebos/ecs/: cloudcontrolapi.GetResource_1.json  ecs.DescribeClusters_1.json  ecs.DescribeServices_1.json  ecs.DescribeTaskDefinition_1.json  ecs.ListClusters_1.json  ecs.ListClusters_2.json  ecs.ListClusters_3.json  ecs.ListClusters_4.json  ecs.ListClusters_5.json  ecs.ListClusters_6.json  ecs.ListServices_1.json  ecs.ListServices_2.json  ecs.ListServices_3.json  ecs.ListServices_4.json  ecs.ListServices_5.json  ecs.ListTaskDefinitions_1.json
tests/placebos/kms/: kms.ListAliases_1.json  kms.ListAliases_2.json  kms.ListKeys_1.json  kms.ListKeys_2.json
tests/placebos/msk/: kafka.ListClustersV2_1.json  kafka.ListClusters_1.json  kafka.ListConfigurations_1.json  kafka.ListKafkaVersions_1.json
tests/placebos/vpc/: cloudcontrolapi.GetResource_1.json  cloudcontrolapi.GetResource_10.json  cloudcontrolapi.GetResource_11.json  cloudcontrolapi.GetResource_2.json  cloudcontrolapi.GetResource_3.json  cloudcontrolapi.GetResource_4.json  cloudcontrolapi.GetResource_5.json  cloudcontrolapi.GetResource_6.json  cloudcontrolapi.GetResource_7.json  cloudcontrolapi.GetResource_8.json  cloudcontrolapi.GetResource_9.json  ec2.DescribeSubnets_1.json  ec2.DescribeVpcs_1.json  sts.GetCallerIdentity_1.json  sts.GetCallerIdentity_2.json  tagging.GetResources_1.json
