[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "compose_x_common"
version = "0.0.2"
description = "Common Library for Compose-X Projects"
authors = ["John Preston <john@compose-x.io>"]
maintainers = ["John Preston <john@compose-x.io>"]
repository = "https://github.com/compose-x/compose-x-common-libs/"
keywords = ["compose-x", "docker", "compose"]
license = "MPL-2.0"
include = [
    "LICENSE",
    "MANIFEST.in"
]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.18.0"

[tool.poetry.dev-dependencies]
placebo = "^0.9.0"
pytest = "^6.2.4"
Sphinx = "^4.1.2"
sphinx-material = "^0.0.34"
isort = "^5.9.3"
black = "^21.7b0"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
coverage = "^5.5"
tbump = "6.3.1"

[tool.tbump]
github_url = "https://github.com/compose-x/compose-x-common-libs/"

[tool.tbump.version]
current = "0.0.2"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:[-.](?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "src/compose_x_common/__init__.py"

[[tool.tbump.before_commit]]
name = "Files format"
cmd = "make conform"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
exclude =[ ".git","__pycache__","docs/source/conf.py","old","build","dist","feature"]
max-line-length = 120
max-complexity = 10
