[build-system]
requires = ["poetry-core>=1.2.5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "compose_x_common"
version = "1.2.5"
description = "Common Library for Compose-X Projects"
authors = ["John Preston <john@compose-x.io>"]
maintainers = ["John Preston <john@compose-x.io>"]
repository = "https://github.com/compose-x/compose-x-common-libs/"
keywords = ["compose-x", "docker", "compose"]
license = "MPL-2.0"
include = [
    "LICENSE",
    "MANIFEST.in"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.22"
flatdict = "^4.0.1"
python-dateutil = "^2.8.2"


[tool.poetry.dev-dependencies]
placebo = ">=0.9.0,<1.0"
pytest = "^6.2.5"
Sphinx = "^5.0"
sphinx-material = "^0.0.35"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.19.0"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
coverage = "^5.5"
tbump = "^6.8.0"
pyupgrade = "^2.32.1"
sphinx-rtd-theme = "^1.0.0"

[tool.tbump]
github_url = "https://github.com/compose-x/compose-x-common/"

[tool.tbump.version]
current = "1.2.5"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "src/compose_x_common/__init__.py"

[[tool.tbump.before_commit]]
name = "Files format"
cmd = "make conform"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.flake8]
exclude =[ ".git","__pycache__","docs/source/conf.py","old","build","dist","feature"]
max-line-length = 88
max-complexity = 10
